# fractal-julia

./: CMakeLists.txt  fractal_openmp.cpp  main.cpp  palette.cpp
